# GEN.AI_Exploring_RAG

./: .gitignore  README.md  pdf_rag.py  pyproject.toml  video_rag.py
BasicRag's/: image_rag.py
FanOutRags/: fanout_rag_app.py  main.py  pyproject.toml
